Fixes spacing for mobile ncmhce scenarios

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1149,6 +1149,9 @@ a.chapter-link:active  {
 	.section-header {
 		font-size: 1.7em;
 	}
+	.page-header h1 {
+		font-size: 1.4em;
+	}
 	.home-space  {
 		margin-bottom: 1em;
 	}
